--- a/front/test.html
+++ b/front/test.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    TEST 2
+    TEST 12345678910
+    <h1> Ceci est un test !</h1>
+	</br>
+	<button>Click me ! Nothing happen haha ... lol.</button>
 </body>
 </html>
