--- a/front/test.html
+++ b/front/test.html
@@ -12,5 +12,6 @@
     <h1> Ceci est un test !</h1>
 	</br>
 	<button>Click me ! Nothing happen haha ... lol.</button>
+	sqmjfheziugfHEUZ
 </body>
 </html>
