product view with unique ref url and working index/nav categories links

--- a/front/index.html
+++ b/front/index.html
@@ -36,10 +36,10 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories
                         </a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Jackets</a>
-                            <a class="dropdown-item" href="#">Gloves</a>
-                            <a class="dropdown-item" href="#">Hat and Caps</a>
-                            <a class="dropdown-item" href="#">Bags</a>
+                            <a class="dropdown-item" ui-sref="products({category: 'Jackets-Coats'})">Jackets and Coats</a>
+                            <a class="dropdown-item" ui-sref="products({category: 'Hats-Caps'})">Hats and Caps</a>
+                            <a class="dropdown-item" ui-sref="products({category: 'Gloves'})">Gloves</a>
+                            <a class="dropdown-item" ui-sref="products({category: 'Bags'})">Bags</a>
                         </div>
                     </li>
                 </ul>
