tentative de function find (peu concluante) + proposition de message full bullshit.

--- a/front/index.html
+++ b/front/index.html
@@ -80,6 +80,11 @@
                     <p>We sell various products for all your needs as a mountain lover, you'll find jackets, gloves, hats, scarfs
                         and much more in our shop.
                     </p>
+                    <!-- PROPOSITION DE CONTENUE BULLSHIT CI DESSOUS :) -->
+                    <!-- <p>Mountain Shop is an online shop designed for mountain lovers by mountain lovers (and this what makes all the difference).</p>
+                    <p>We select for you the best products to suit all your mountain lover needs. You'll find jackets, gloves, hats, scarfs
+                        and much more in our shop.
+                    </p> -->
                 </div>
                 <div class="col-md-6 ml-auto">
                     <div class="my-3">
