--- a/front/index.html
+++ b/front/index.html
@@ -53,7 +53,7 @@
                 </ul>
                 <ul ng-if="logged" class="navbar-nav ml-auto mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref="home">My Account</a>
+                        <a class="nav-link" ui-sref="home">Account</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" ng-click="logout()">Logout</a>
@@ -76,15 +76,10 @@
                     <h5 class="title mb-3">
                         <strong>About Mountain Shop</strong>
                     </h5>
-                    <p>Mountain Shop is an online shop designed for mountain lovers.</p>
-                    <p>We sell various products for all your needs as a mountain lover, you'll find jackets, gloves, hats, scarfs
-                        and much more in our shop.
-                    </p>
-                    <!-- PROPOSITION DE CONTENUE BULLSHIT CI DESSOUS :) -->
-                    <!-- <p>Mountain Shop is an online shop designed for mountain lovers by mountain lovers (and this what makes all the difference).</p>
-                    <p>We select for you the best products to suit all your mountain lover needs. You'll find jackets, gloves, hats, scarfs
-                        and much more in our shop.
-                    </p> -->
+                    <p>Mountain Shop is an online shop designed for mountain lovers by mountain lovers (and this what makes
+                        all the difference).</p>
+                    <p>We select for you the best products to suit all your mountain lover needs. You'll find jackets, gloves,
+                        hats, bags and much more in our shop.</p>
                 </div>
                 <div class="col-md-6 ml-auto">
                     <div class="my-3">
