--- a/front/index.html
+++ b/front/index.html
@@ -27,13 +27,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref="home" ui-sref-active="active">Home</a>
+                        <a class="nav-link" ui-sref="home" ui-sref-active="active-menu">
+                            <i class="fa fa-home" aria-hidden="true"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref="products" ui-sref-active="active">Products</a>
+                        <a class="nav-link" ui-sref="products" ui-sref-active="active-menu">
+                            <i class="fa fa-cubes" aria-hidden="true"></i> Products</a>
                     </li>
                     <li class="nav-item btn-group">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-bars" aria-hidden="true"></i> Categories
                         </a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" ui-sref="products({category: 'Jackets-Coats'})">Jackets and Coats</a>
@@ -45,18 +48,30 @@
                 </ul>
                 <ul ng-if="!logged" class="navbar-nav ml-auto mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="modal" data-target="#modalLogin">Login</a>
+                        <a class="nav-link" ui-sref="cart" ui-sref-active="active-menu">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="modal" data-target="#modalRegister">Register</a>
+                        <a class="nav-link" data-toggle="modal" data-target="#modalLogin">
+                            <i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="modal" data-target="#modalRegister">
+                            <i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
                     </li>
                 </ul>
                 <ul ng-if="logged" class="navbar-nav ml-auto mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref="home">Account</a>
+                        <a class="nav-link" ui-sref="cart" ui-sref-active="active-menu">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" ng-click="logout()">Logout</a>
+                        <a class="nav-link" ui-sref="home">
+                            <i class="fa fa-user" aria-hidden="true"></i> Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ng-click="logout()">
+                            <i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
                     </li>
                 </ul>
             </div>
@@ -111,7 +126,7 @@
             <!--Content-->
             <div class="modal-content">
                 <!--Header-->
-                <div class="modal-header light-blue darken-3 white-text">
+                <div class="modal-header default-color darken-3 white-text">
                     <h4 class="title">
                         <i class="fa fa-user"></i> Log in</h4>
                     <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close">
@@ -131,7 +146,7 @@
                         <label for="form31">Your password</label>
                     </div>
                     <div class="text-center mt-2">
-                        <button class="btn btn-info" ng-click="login()">Log in
+                        <button class="btn btn-default" ng-click="login()">Log in
                             <i class="fa fa-sign-in ml-1"></i>
                         </button>
                     </div>
@@ -146,9 +161,9 @@
             <!--Content-->
             <div class="modal-content">
                 <!--Header-->
-                <div class="modal-header light-blue darken-3 white-text">
+                <div class="modal-header default-color darken-3 white-text">
                     <h4 class="title">
-                        <i class="fa fa-user-plus"></i> Register</h4>
+                        <i class="fa fa-user-plus" aria-hidden="true"></i> Register</h4>
                     <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -181,7 +196,7 @@
                         <label for="form36">Repeat password</label>
                     </div>
                     <div class="text-center mt-2">
-                        <button class="btn btn-info" ng-click="register()">Sign up
+                        <button class="btn btn-default" ng-click="register()">Sign up
                             <i class="fa fa-sign-in ml-1"></i>
                         </button>
                     </div>
