--- a/front/index.html
+++ b/front/index.html
@@ -66,7 +66,7 @@
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref="home">
+                        <a class="nav-link" ui-sref="account">
                             <i class="fa fa-user" aria-hidden="true"></i> Account</a>
                     </li>
                     <li class="nav-item">
